tests/final/expect/15__diag__axis4_wave9_macro_alias_permute_b_arity_fail_no_crash.diag
Diagnostics:
axis4_wave9_perm_b_layer_b.h:543203:28: error: macro 'AX4_W9_PERM_B_FINAL' requires 3 argument(s), got 2
Error: preprocessing failed
axis4_wave9_perm_b_layer_a.h:1086299:28: error: macro 'AX4_W9_PERM_B_FINAL' requires 3 argument(s), got 2
axis4_wave9_perm_b_layer_a.h:1086299:28: error: macro 'AX4_W9_PERM_B_FINAL' requires 3 argument(s), got 2
